@@ -41,6 +41,7 @@ version 0.9.5 -- unreleased
 	 . Handle "keep = yes" to disable old backups removal (Closes: #424633)
 	 . Add configuration option to allow you to disable the version check
 	   as in some instances this may be an ok scenario (Closes: #424632)
+	 . Added local destination support to helper (Closes: Trac#4)
 	rub/rsync
 	 . Fixed typo in rub handler that caused it to not work
 	 . Changed to use lib/vserver code
